# rest-shop

./: .gitignore  Makefile.dist  README.md  dist.env  pyproject.toml  setup.cfg
api/: admin.py  urls.py  yasg.py
api/fixtures/: courier_type.json
api/models/: courier.py  order.py
api/schemas/: courier.py  order.py
api/serializers/: courier.py  order.py
api/tests/: courier.py  courier_detail.py  courier_edit.py  order.py  order_assign.py  order_complete.py
api/tests/fixtures/: couriers.json  couriers_detail.json  couriers_edit.json  orders.json  orders_assign_time.json  orders_assign_weight.json
api/views/: courier.py  order.py
shop/: asgi.py  settings.py  urls.py  wsgi.py
